@@ -1,7 +1,7 @@
 #-*- coding:utf8 -*-
 from django.conf.urls import patterns
 from django.views.decorators.csrf import csrf_exempt
-from shopapp.calendar.views import MainEventPageView,StaffEventView,delete_staff_event
+from shopapp.calendar.views import MainEventPageView,StaffEventView,delete_staff_event,complete_staff_event
 from shopapp.calendar.renderers import CalendarTempalteRenderer
 from shopapp.calendar.resources import MainStaffEventResource,StaffEventResource
 from shopback.base.renderers import BaseJsonRenderer
@@ -11,6 +11,7 @@ from shopback.base.authentication import UserLoggedInAuthentication,login_requir
 urlpatterns = patterns('',
                        
     (r'delete/(?P<id>\d{1,20})/',csrf_exempt(login_required_ajax(delete_staff_event))),
+    (r'complete/(?P<id>\d{1,20})/',csrf_exempt(login_required_ajax(complete_staff_event))),
     (r'^$', MainEventPageView.as_view(
         resource=MainStaffEventResource,
         renderers=(CalendarTempalteRenderer,),
